--- a/panel/item.html
+++ b/panel/item.html
@@ -1,4 +1,4 @@
-<dom-module id="search-file-item">
+<dom-module id="quick-open-file-item">
     <link rel="import" type="css" href="item.css">
 
     <template>
