--- a/panel/item.html
+++ b/panel/item.html
@@ -2,7 +2,7 @@
     <link rel="import" type="css" href="item.css">
 
     <template>
-        <li class$="{{_itemClass(selected)}}">{{path}}</li>
+        <li class="item">{{path}}</li>
     </template>
 
     <script type="text/javascript">
@@ -20,16 +20,8 @@
 
                 selected: {
                     type: Boolean,
-                    value: false
-                }
-            },
-
-            _itemClass: function(selected) {
-                if (selected) {
-                    return "item selected";
-                }
-                else {
-                    return "item";
+                    value: false,
+                    reflectToAttribute: true
                 }
             }
         });
