Auto scroll list

--- a/panel/index.html
+++ b/panel/index.html
@@ -4,7 +4,7 @@
 </header>
 
 <section>
-    <ol id="filesList" v-el:filesList class="file-list">
+    <ol id="filesList" v-el:fileslist class="file-list">
         <li class="item" v-for="item in fileItems" :selected="item.selected">    {{item.path}}
         </li>
     </ol>
